--- a/views/edit_memo.erb
+++ b/views/edit_memo.erb
@@ -2,7 +2,7 @@
     <h1 class="title">メモアプリ</h1>
 </header>
 <main>
-    <form action="<%= @id %>">
+    <form action="<%= "/edit/#{@id}" %>" method="post">
         <div class="memo_title">
             <input type="text" name="title" id="title" value="<%= @title %>">
         </div>
