コードの修正 - parse_jsonの追加 - RESTに倣ったURIに修正 - memo.jsonを空に修正 - reset.css呼び出し元を統一 - htmlエスケープ処理をview側で行うよう修正

--- a/views/edit_memo.erb
+++ b/views/edit_memo.erb
@@ -2,12 +2,12 @@
     <h1 class="title">メモアプリ</h1>
 </header>
 <main>
-    <form action="<%= "/edit/#{@id}" %>" method="post">
+    <form action="<%= "/memo/edit/#{@id}" %>" method="post">
         <div class="memo_title">
-            <input type="text" name="title" id="title" value="<%= @title %>">
+            <input type="text" name="title" id="title" value="<%= h @title %>">
         </div>
         <div class="memo_text">
-            <textarea name="text" id="text" cols="30" rows="10"><%= @text %></textarea>
+            <textarea name="text" id="text" cols="30" rows="10"><%= h @text %></textarea>
         </div>
         <input id="hidden" type="hidden" name="_method" value="patch">
         <input type="submit" value="変更" id="save">
