--- a/views/new_memo.erb
+++ b/views/new_memo.erb
@@ -3,7 +3,7 @@
 </header>
 <main>
 
-    <form action="save" method="post">
+    <form action="/memo/save" method="post">
         <div class="memo_title">
             <input type="text" name="title" id="title">
         </div>
