--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,12 @@
 <header>
     <h1 class="title">メモアプリ</h1>
-    <a href="new" class="add_button">追加</a>
+    <a href="/memo/new" class="add_button">追加</a>
 </header>
 <main>
     <ul>
         <% @memos.each do |id, memo| %>
             <li>
-                <a href="<%= "show/#{id}" %>"><%= memo["title"] %></a>
+                <a href="<%= "/memo/show/#{id}" %>"><%= h memo["title"] %></a>
             </li>
         <% end %>
     </ul>
