--- a/views/show_memo.erb
+++ b/views/show_memo.erb
@@ -4,17 +4,17 @@
 <main>
     <div class="memo_title">
         <h1 id="title">
-            <%= @title %>
+            <%= h @title %>
         </h1>
     </div>
     <div class="memo_text">
         <p id="text">
-            <%= @text %>
+            <%= h @text %>
         </p>
     </div>
     <div class="select">
-        <a href="<%= "/edit/#{@id}" %>" id="edit">変更</a>
-        <form method="post" action="<%= "/delete/#{@id}" %>">
+        <a href="<%= "/memo/edit/#{@id}" %>" id="edit">変更</a>
+        <form method="post" action="<%= "/memo/delete/#{@id}" %>">
             <input type="submit" value="削除" id="delete">
             <input id="hidden" type="hidden" name="_method" value="delete">
         </form>
