--- a/views/edit_memo.erb
+++ b/views/edit_memo.erb
@@ -1,8 +1,10 @@
+<link rel="stylesheet" href="/css/edit/style.css">
+
 <header>
     <h1 class="title">メモアプリ</h1>
 </header>
 <main>
-    <form action="<%= "/memo/edit/#{@id}" %>" method="post">
+    <form action="<%= "/memo/#{@id}/edit" %>" method="post">
         <div class="memo_title">
             <input type="text" name="title" id="title" value="<%= h @title %>">
         </div>
