--- a/views/new_memo.erb
+++ b/views/new_memo.erb
@@ -1,9 +1,10 @@
+<link rel="stylesheet" href="/css/style.css">
 <header>
     <h1 class="title">メモアプリ</h1>
 </header>
 <main>
 
-    <form action="/memo/save" method="post">
+    <form action="/memo/new" method="post">
         <div class="memo_title">
             <input type="text" name="title" id="title">
         </div>
