プログラムの修正 - RESTに倣ったURIに修正 - Gemfile.lockの追加 - Gemfileの修正

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,13 @@
 <link rel="stylesheet" href="/css/style.css">
 <header>
     <h1 class="title">メモアプリ</h1>
-    <a href="/memo/new" class="add_button">追加</a>
+    <a href="/memos/new" class="add_button">追加</a>
 </header>
 <main>
     <ul>
         <% @memos.each do |id, memo| %>
             <li>
-                <a href="<%= "/memo/#{id}" %>"><%= h memo["title"] %></a>
+                <a href="<%= "/memos/#{id}" %>"><%= h memo["title"] %></a>
             </li>
         <% end %>
     </ul>
