--- a/views/new_memo.erb
+++ b/views/new_memo.erb
@@ -4,7 +4,7 @@
 </header>
 <main>
 
-    <form action="/memo/new" method="post">
+    <form action="/memos/new" method="post">
         <div class="memo_title">
             <input type="text" name="title" id="title">
         </div>
