--- a/views/show_memo.erb
+++ b/views/show_memo.erb
@@ -15,7 +15,7 @@
     </div>
     <div class="select">
         <a href="<%= "/memos/#{@id}/edit" %>" id="edit">変更</a>
-        <form method="post" action="<%= "/memos/#{@id}/delete" %>">
+        <form method="post" action="<%= "/memos/#{@id}" %>">
             <input type="submit" value="削除" id="delete">
             <input id="hidden" type="hidden" name="_method" value="delete">
         </form>
