--- a/views/show_memo.erb
+++ b/views/show_memo.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="memo_text">
         <p id="text">
-            <%= h @text %>
+            <%= h @content %>
         </p>
     </div>
     <div class="select">
