プログラムの修正 - テーブル作成処理の修正 - メモ新規作成画面の修正 - read_memo_by_idメソッドの修正

--- a/views/new_memo.erb
+++ b/views/new_memo.erb
@@ -9,7 +9,7 @@
             <input type="text" name="title" id="title">
         </div>
         <div class="memo_text">
-            <textarea name="text" id="text" cols="30" rows="10"></textarea>
+            <textarea name="content" id="text" cols="30" rows="10"></textarea>
         </div>
         <input type="submit" value="保存" id="save">
     </form>
